--- a/views/jobs.html
+++ b/views/jobs.html
@@ -116,7 +116,7 @@
                                     <p><img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -154,7 +154,7 @@
                                     <p><img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -192,7 +192,7 @@
                                     <p><img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -230,7 +230,7 @@
                                     <p><img src="../img/map.png" alt="Napa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -268,7 +268,7 @@
                                     <p><img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -306,7 +306,7 @@
                                     <p><img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -345,7 +345,7 @@
                                     <img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -383,7 +383,7 @@
                                     <p><img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -421,7 +421,7 @@
                                     <p><img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -459,7 +459,7 @@
                                     <p><img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -497,7 +497,7 @@
                                     <p><img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -535,7 +535,7 @@
                                     <p><img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -573,7 +573,7 @@
                                     <p><img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -611,7 +611,7 @@
                                     <p><img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -649,7 +649,7 @@
                                     <p><img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -687,7 +687,7 @@
                                     <p><img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -725,7 +725,7 @@
                                     <p><img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -763,7 +763,7 @@
                                     <p><img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -801,7 +801,7 @@
                                     <p><img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -839,7 +839,7 @@
                                     <p><img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -877,7 +877,7 @@
                                     <p><img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -915,7 +915,7 @@
                                     <p><img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -953,7 +953,7 @@
                                     <p><img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -991,7 +991,7 @@
                                     <p><img src="../img/map.png" alt="Mapa" class="dataLink">
                                         Medellín, Colombia</p>
                                 </div>
-                                <p><span>Publicado 23/10/2023</span></p>
+                                <p><span class="publicar">Publicado 23/10/2023</span></p>
                             </div>
                         </article>
                         <article class="links">
@@ -1055,7 +1055,7 @@
                                 </a>
                             </article>
                         </div>
-                        <a href="#" class="postulate">
+                        <a href="#" class="postulateDesign">
                             <img src="../img/check.png" alt="Check" class="check">
                             ¡Postulate!
                         </a>
@@ -1093,7 +1093,7 @@
                                 </a>
                             </article>
                         </div>
-                        <a href="#" class="postulate">
+                        <a href="#" class="postulateDesign">
                             <img src="../img/check.png" alt="Check" class="check">
                             ¡Postulate!
                         </a>
@@ -1131,7 +1131,7 @@
                                 </a>
                             </article>
                         </div>
-                        <a href="#" class="postulate">
+                        <a href="#" class="postulateDesign">
                             <img src="../img/check.png" alt="check" class="check">
                             ¡Postulate!
                         </a>
@@ -1169,7 +1169,7 @@
                                 </a>
                             </article>
                         </div>
-                        <a href="#" class="postulate">
+                        <a href="#" class="postulateDesign">
                             <img src="../img/check.png" alt="Check" class="check">
                             ¡Postulate!
                         </a>
@@ -1207,7 +1207,7 @@
                                 </a>
                             </article>
                         </div>
-                        <a href="#" class="postulate">
+                        <a href="#" class="postulateDesign">
                             <img src="../img/check.png" alt="Check" class="check">
                             ¡Postulate!
                         </a>
@@ -1245,7 +1245,7 @@
                                 </a>
                             </article>
                         </div>
-                        <a href="#" class="postulate">
+                        <a href="#" class="postulateDesign">
                             <img src="../img/check.png" alt="Check" class="check">
                             ¡Postulate!
                         </a>
@@ -1283,7 +1283,7 @@
                                 </a>
                             </article>
                         </div>
-                        <a href="#" class="postulate">
+                        <a href="#" class="postulateDesign">
                             <img src="../img/check.png" alt="Check" class="check">
                             ¡Postulate!
                         </a>
@@ -1321,7 +1321,7 @@
                                 </a>
                             </article>
                         </div>
-                        <a href="#" class="postulate">
+                        <a href="#" class="postulateDesign">
                             <img src="../img/check.png" alt="Check" class="check">
                             ¡Postulate!
                         </a>
@@ -1359,7 +1359,7 @@
                                 </a>
                             </article>
                         </div>
-                        <a href="#" class="postulate">
+                        <a href="#" class="postulateDesign">
                             <img src="../img/check.png" alt="check" class="check">
                             ¡Postulate!
                         </a>
@@ -1397,7 +1397,7 @@
                                 </a>
                             </article>
                         </div>
-                        <a href="#" class="postulate">
+                        <a href="#" class="postulateDesign">
                             <img src="../img/check.png" alt="Check" class="check">
                             ¡Postulate!
                         </a>
@@ -1435,7 +1435,7 @@
                                 </a>
                             </article>
                         </div>
-                        <a href="#" class="postulate">
+                        <a href="#" class="postulateDesign">
                             <img src="../img/check.png" alt="Check" class="check">
                             ¡Postulate!
                         </a>
@@ -1473,7 +1473,7 @@
                                 </a>
                             </article>
                         </div>
-                        <a href="#" class="postulate">
+                        <a href="#" class="postulateDesign">
                             <img src="../img/check.png" alt="Check" class="check">
                             ¡Postulate!
                         </a>
@@ -1511,7 +1511,7 @@
                                 </a>
                             </article>
                         </div>
-                        <a href="#" class="postulate">
+                        <a href="#" class="postulateDesign">
                             <img src="../img/check.png" alt="" class="check">
                             ¡Postulate!
                         </a>
